- Fixed leaderboard table to show active / partial results - Changed Daily Point to High Daily Point label and stat - Fixed 'Exit' route for businesses - Fixes to user stat line, remove references to screen width, used user   account type - Fixed leaderboard table not showing correclty.

--- a/src/app/components/business-users/business-users.component.scss
+++ b/src/app/components/business-users/business-users.component.scss
@@ -1,7 +1,7 @@
 @import '../../../globals.scss';
 
 .backgroundx{
-    padding-left: 200px;
+    /*padding-left: 200px;*/
 }
 
 .title{
